🎫🐗 Checkpoint ./views/index.html:111231/36

--- a/views/index.html
+++ b/views/index.html
@@ -56,12 +56,12 @@
       id="notify-me"
       onclick="notifyMe()"
       disabled>
-      Notify current subscription
+      Notify me
     </button>
     <button   
       id="notify-all"
       onclick="notifyAll()">
-      Notify all subscriptions
+      Notify all
     </button>
   </body>
 </html>
