--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,12 @@
         height: 125px;
         width: 400px;
       }
+      button {
+        margin-right: 10px;
+        margin-top: 10px;
+        min-width: 48px;
+        min-height: 48px;
+      }      
     </style>
   </head>
   <body>
